Company Name, Register, Login
Updated look for company name and image. Now base aligned.
Register has been up[dated to allows address to be entered for suppliers.
Login now has an alert if the email and password pair is not found in the database.

--- a/GreenHarborMetals/src/assets/style/Menu.css
+++ b/GreenHarborMetals/src/assets/style/Menu.css
@@ -57,11 +57,12 @@ body {
 
 .CompanyNameContainer{
   display: block;
+ 
 }
 
 .LogoContainer{
   display: flex;
-  align-items: center;
+  align-items:baseline;
   justify-content: center;
   margin: 5px auto 5px;
 }
