--- a/GreenHarborMetals/src/assets/style/Homepage.css
+++ b/GreenHarborMetals/src/assets/style/Homepage.css
@@ -1,6 +1,9 @@
 .LogInContainer {
     margin: 20px auto;
 }
+.RegisterContainer {
+    margin: 1%px auto;
+}
 
 .LogIn {
     background-color: rgb(0, 145, 87);
@@ -10,6 +13,18 @@
     width: 20%;
     margin-left: 41%;
     margin-top: 8%;
+    border: 2px solid black;
+    box-shadow: 5px 5px 5px px rgba(0, 0, 0, 0.5);
+}
+
+.Register {
+    background-color: rgb(0, 145, 87);
+    background-color: rgba(0, 145, 87, 0.85);
+    display: flex;
+    justify-content: center;
+    width: 20%;
+    margin-left: 41%;
+    margin-top: 1.5%;
     border: 2px solid black;
     box-shadow: 5px 5px 5px px rgba(0, 0, 0, 0.5);
 }
@@ -61,5 +76,8 @@
     font-size: 21px;
     border: 2px solid black;
     background-color: rgb(0, 0, 0, 0.25);
+}
 
+.SubSection{
+    font-size: 100%;
 }
