--- a/GreenHarborMetals/src/assets/style/About.css
+++ b/GreenHarborMetals/src/assets/style/About.css
@@ -1,13 +1,13 @@
 .AboutContainer {
-    background-color: rgb(0, 115, 69);
-    background-color: rgba(0, 115, 69, 0.75);
+    background-color: rgb(0, 145, 87);
+    background-color: rgba(0, 145, 87, 0.75);
     padding-top: 0.5%;
    
     border: 2px solid black;
     margin-top: 3%;
     margin-left: 10%;
     margin-right: 10%;
-    box-shadow: 10px 10px 10px px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -29,8 +29,8 @@
     display: flex;
     align-content: center;
     justify-content: left;
-    background-color: rgb(0, 115, 69);
-    background-color: rgba(0, 115, 69, 0.75);
+    background-color: rgb(0, 145, 87);
+    background-color: rgba(0, 145, 87, 0.75);
     border: 2px solid black;
 }
 
@@ -54,5 +54,5 @@
     padding: 0.5%;
     width: 70%;
     font-size: 120%;
-    font-weight: 100;
+    font-weight: 500;
 }
