--- a/GreenHarborMetals/src/assets/style/Homepage.css
+++ b/GreenHarborMetals/src/assets/style/Homepage.css
@@ -14,7 +14,7 @@
     margin-left: 41%;
     margin-top: 8%;
     border: 2px solid black;
-    box-shadow: 5px 5px 5px px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .Register {
@@ -26,7 +26,7 @@
     margin-left: 41%;
     margin-top: 1.5%;
     border: 2px solid black;
-    box-shadow: 5px 5px 5px px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .SignUpForm {
