--- a/GreenHarborMetals/src/assets/style/Cart.css
+++ b/GreenHarborMetals/src/assets/style/Cart.css
@@ -51,24 +51,47 @@
     background-color: rgb(0, 145, 87);
     background-color: rgba(0, 145, 87, 0.75);
     color: black;
+    border: 2px solid black;
+    border-radius: 10%;
+    text-shadow: none;
+    -webkit-box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, .5);
+    box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, .5);
    
 }
 
 .CartButton:hover{
     background-color: rgb(0, 115, 69);
     background-color: rgba(0, 115, 69, 0.75);
+    
     color: #ffde59;
+    background: #00915700;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0073458c), color-stop(56%, #0073458c), color-stop(100%, #0073458c));
+    background: linear-gradient(to bottom, #0073458c 0%, #0073458c 56%, #0073458c 100%);
+    text-shadow: none;
+    -webkit-box-shadow: inset 0px 5px 5px 1px rgba(0, 0, 0, .3);
+    box-shadow: inset 0px 5px 5px 1px rgba(0, 0, 0, .3);
 }
 
 .CheckoutButton{
     background-color: rgb(0, 145, 87);
     background-color: rgba(0, 145, 87, 0.75);
     color: black;
+    border: 2px solid black;
+    border-radius: 10%;
+    text-shadow: none;
+    -webkit-box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, .5);
+    box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, .5);
 }
 
 .CheckoutButton:hover{
     background-color: rgb(0, 115, 69);
     background-color: rgba(0, 115, 69, 0.75);
     color: #ffde59;
+    background: #00915700;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0073458c), color-stop(56%, #0073458c), color-stop(100%, #0073458c));
+    background: linear-gradient(to bottom, #0073458c 0%, #0073458c 56%, #0073458c 100%);
+    text-shadow: none;
+    -webkit-box-shadow: inset 0px 5px 5px 1px rgba(0, 0, 0, .3);
+    box-shadow: inset 0px 5px 5px 1px rgba(0, 0, 0, .3);
 } 
 
