--- a/GreenHarborMetals/src/assets/style/Homepage.css
+++ b/GreenHarborMetals/src/assets/style/Homepage.css
@@ -44,13 +44,22 @@
 .SubmitButton{
     color: black;  
     background-color: rgba(0, 145, 87, 0.75);
-    
-    border-radius: 4px;
+    border: 2px solid black;
+    border-radius: 10%;
+    text-shadow: none;
+    -webkit-box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, .5);
+    box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, .5);
 }
 
 .SubmitButton:hover {
     color: rgb(255, 222, 89);
     background-color: rgba(0, 115, 69, 0.75);
+    background: #00915700;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0073458c), color-stop(56%, #0073458c), color-stop(100%, #0073458c));
+    background: linear-gradient(to bottom, #0073458c 0%, #0073458c 56%, #0073458c 100%);
+    text-shadow: none;
+    -webkit-box-shadow: inset 0px 5px 5px 1px rgba(0, 0, 0, .3);
+    box-shadow: inset 0px 5px 5px 1px rgba(0, 0, 0, .3);
 }
 
 .SignUpInput{
@@ -68,6 +77,7 @@
 
 .LogInSignUp a:hover {
     color: #ffde59;
+    
 }
 
 .Title{
