--- a/GreenHarborMetals/src/assets/style/Cart.css
+++ b/GreenHarborMetals/src/assets/style/Cart.css
@@ -39,6 +39,11 @@
 .Cart{
     padding-left: 1.4%;
     padding-bottom:4%;
+    text-align: center;
+}
+
+.CartName {
+    font-size: 200%;
 }
 
 .Checkout{
@@ -46,6 +51,29 @@
     padding-bottom:2%;
 }
 
+.OrdersContainer {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+.Orders {
+    background-color: rgb(0, 145, 87);
+    background-color: rgba(0, 145, 87, 0.75);
+    font-size: 120%;
+    font-weight: 500;
+    border: 2px solid black;
+    width: 50%;
+    margin-bottom: 2%;
+    padding-left:1%;
+    padding-bottom:1%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.CartButtonContainer{
+    margin-left: 0%;
+}
 
 .CartButton{
     background-color: rgb(0, 145, 87);
