--- a/GreenHarborMetals/src/assets/style/Account.css
+++ b/GreenHarborMetals/src/assets/style/Account.css
@@ -27,3 +27,19 @@
     width: 7%;
    
 }
+
+.SalesOrdersContainer{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+.SalesOrders {
+    background-color: rgb(0, 145, 87);
+    background-color: rgba(0, 145, 87, 0.85);
+    border: 2px solid black;
+    width: 50%;
+    padding-left: 1%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
